ho fatto la nav

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <a class="brand" href="">Tiktok</a>
+    </nav>
     <header>
         <h1>tiktok</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, tempora delectus! Beatae aliquam voluptatibus iste mollitia dolore minus, ratione praesentium, molestiae quia eos distinctio doloribus error eum autem rem ex.</p>
