ho fatto il footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <h1>tiktok</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, tempora delectus! Beatae aliquam voluptatibus iste mollitia dolore minus, ratione praesentium, molestiae quia eos distinctio doloribus error eum autem rem ex.</p>
     </header>
+
+    <footer>
+        <a class="brand" href="">tiktok</a>
+        <ul>
+            <li>Via sulla. </li>
+        </ul>
+    </footer>
     
 </body>
 </html>
